force-app/main/default/objects/FS_Initial_Order__c/FS_Initial_Order__c.object-meta.xml
<CustomObject>
    <label>Initial Order</label>
    <nameField>
        <label>Initial Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initial Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>