force-app/main/default/objects/FS_Initial_Order__c/fields/Customer_Registered__c.field-meta.xml
<CustomField>
    <fullName>Customer_Registered__c</fullName>
    <formula>FS_Installation__r.FS_CustomerRegisteredWithCokeSmart_CPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Registered</label>
    <type>Checkbox</type>
</CustomField>