force-app/main/default/objects/FS_Initial_Order__c/fields/Difference_Day_for_SLA_On_board_report__c.field-meta.xml
<CustomField>
    <fullName>Difference_Day_for_SLA_On_board_report__c</fullName>
    <formula>FS_ACN_Install_Date__c - FS_Order_Proc_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Day for SLA On board report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>