force-app/main/default/objects/FS_Initial_Order__c/fields/difference_days__c.field-meta.xml
<CustomField>
    <fullName>difference_days__c</fullName>
    <formula>FS_ACN_Install_Date__c - FS_Order_Proc_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>difference days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>