force-app/main/default/objects/FS_Initial_Order__c/fields/FS_10_Cost_Unit__c.field-meta.xml
<CustomField>
    <fullName>FS_10_Cost_Unit__c</fullName>
    <formula>IF(DATEVALUE(FS_Order_Processed_DataTime__c)&gt;= DATEVALUE(&quot;2013-01-01&quot;)&amp;&amp; DATEVALUE(FS_Order_Processed_DataTime__c)&lt;= DATEVALUE(&quot;2013-12-31&quot;),43.54, 
IF(DATEVALUE(FS_Order_Processed_DataTime__c)&gt;= DATEVALUE(&quot;2014-01-01&quot;)&amp;&amp; DATEVALUE(FS_Order_Processed_DataTime__c)&lt;= DATEVALUE(&quot;2014-12-31&quot;),45.06, 
46.86))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Cost/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>