force-app/main/default/objects/FS_Initial_Order__c/fields/FS_10_Package_Days_Capacity_1000__c.field-meta.xml
<CustomField>
    <fullName>FS_10_Package_Days_Capacity_1000__c</fullName>
    <formula>If(CONTAINS(FS_SpicyCherry__c, &quot;Pibb&quot;  ) ,45.913589,
If(Contains(FS_SpicyCherry__c, &quot;Pepper&quot;) ,48.642718,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Package # Days Capacity (1000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>