force-app/main/default/objects/FS_Initial_Order__c/fields/FS_10_SAP_Material__c.field-meta.xml
<CustomField>
    <fullName>FS_10_SAP_Material__c</fullName>
    <formula>IF(FS_Mello_Yello_Check__c = true, &#39;241078 : Mello Yello&#39;, &#39;1473972 : Vault / Vault Zero&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 SAP Material #</label>
    <type>Text</type>
</CustomField>