force-app/main/default/objects/FS_Initial_Order__c/fields/FS_11_Cost_Unit__c.field-meta.xml
<CustomField>
    <fullName>FS_11_Cost_Unit__c</fullName>
    <formula>IF(AND( DATEVALUE( FS_Order_Processed_DataTime__c ) &gt;= DATEVALUE(&quot;2013-01-01&quot;) ,
DATEVALUE(FS_Order_Processed_DataTime__c)&lt;= DATEVALUE(&quot;2013-12-31&quot;)), 43.54, 45.06)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 Cost/Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>