force-app/main/default/objects/FS_Initial_Order__c/fields/FS_11_Package_Days_Capacity_1000__c.field-meta.xml
<CustomField>
    <fullName>FS_11_Package_Days_Capacity_1000__c</fullName>
    <formula>If(CONTAINS(FS_SpicyCherry__c , &quot;Pibb&quot;  ) ,41.824765,
If(AND(Contains( FS_Outlet__r.Name ,&quot;firehouse&quot;) , Contains(FS_SpicyCherry__c,&quot;Pepper&quot;)),
28.883429,
If(Contains(FS_SpicyCherry__c,&quot;Pepper&quot;),
10.6,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 Package # Days Capacity (1000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>