force-app/main/default/objects/FS_Initial_Order__c/fields/FS_11_SAP_Material__c.field-meta.xml
<CustomField>
    <fullName>FS_11_SAP_Material__c</fullName>
    <formula>IF( FS_SpicyCherry__c = &#39;Pibb/Pibb Zero&#39;, &#39;1445014 : Pibb Xtra / Pibb Xtra Zero&#39;, 
 IF( FS_SpicyCherry__c = &#39;Pibb&#39;, &#39;1445014 : Pibb&#39;, 
   IF( OR( FS_SpicyCherry__c = &#39;Dr Pepper Only&#39;, FS_SpicyCherry__c = &#39;Dr. Pepper&#39; , FS_SpicyCherry__c = &#39;Dr Pepper/Diet Dr Pepper&#39;), &#39;205082 : Dr. Pepper / Diet Dr. Pepper&#39;, &#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 SAP Material #</label>
    <type>Text</type>
</CustomField>