force-app/main/default/objects/FS_Initial_Order__c/fields/FS_11_Slots_to_Add__c.field-meta.xml
<CustomField>
    <fullName>FS_11_Slots_to_Add__c</fullName>
    <formula>IF( FS_11_Package_Days_Capacity_1000__c = 10.6, 
 IF((FS_1_Slots_to_Add__c + FS_11_Slots__c ) &lt;= FS_Slots_Partial_Case__c, FS_11_Slots__c , 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 Slots to Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>