force-app/main/default/objects/FS_Initial_Order__c/fields/FS_12_Override__c.field-meta.xml
<CustomField>
    <fullName>FS_12_Override__c</fullName>
    <label>Powerade Override</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>