force-app/main/default/objects/FS_Initial_Order__c/fields/FS_12_SAP_Material__c.field-meta.xml
<CustomField>
    <fullName>FS_12_SAP_Material__c</fullName>
    <formula>IF(FS_PADE_Check__c= true, &#39;241378 : Powerade&#39;, &#39;1488596  :  Powerade&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 SAP Material #</label>
    <type>Text</type>
</CustomField>