force-app/main/default/objects/FS_Initial_Order__c/fields/FS_12_Slots__c.field-meta.xml
<CustomField>
    <fullName>FS_12_Slots__c</fullName>
    <formula>2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12 # Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>