force-app/main/default/objects/FS_Initial_Order__c/fields/FS_13_Slots_to_Add__c.field-meta.xml
<CustomField>
    <fullName>FS_13_Slots_to_Add__c</fullName>
    <formula>IF(Contains( FS_Outlet__r.Name ,&quot;firehouse&quot;),
(If( FS_1_Slots_to_Add__c + FS_13_Slots__c &lt;= FS_Slots_Partial_Case__c , FS_13_Slots__c ,0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>13 Slots to Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>