force-app/main/default/objects/FS_Initial_Order__c/fields/FS_15_Slots_to_Add__c.field-meta.xml
<CustomField>
    <fullName>FS_15_Slots_to_Add__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>15 Slots to Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>