force-app/main/default/objects/FS_Initial_Order__c/fields/FS_19_SAP_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_19_SAP_Material_Number__c</fullName>
    <formula>&#39;1454312&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS_19_SAP_Material Number</label>
    <type>Text</type>
</CustomField>