force-app/main/default/objects/FS_Initial_Order__c/fields/FS_25_Customer_Cost__c.field-meta.xml
<CustomField>
    <fullName>FS_25_Customer_Cost__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>25 Customer Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>