force-app/main/default/objects/FS_Initial_Order__c/fields/FS_ACN_IndicatorEcommStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN_IndicatorEcommStatus__c</fullName>
    <formula>FS_Installation__r.FS_Outlet__r.FS_Indicator_Ecomm_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACN - Indicator Ecomm Status</label>
    <type>Text</type>
</CustomField>