force-app/main/default/objects/FS_Initial_Order__c/fields/FS_ACN_InitialOrderDaysStock__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN_InitialOrderDaysStock__c</fullName>
    <formula>FS_Installation__r.FS_Initial_Order_Days_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACN - Initial Order - # Days Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>