force-app/main/default/objects/FS_Initial_Order__c/fields/FS_ACN_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN_Install_Date__c</fullName>
    <formula>FS_Installation__r.FS_Scheduled_Install_Date__c</formula>
    <label>Scheduled Install Date</label>
    <type>Date</type>
</CustomField>