force-app/main/default/objects/FS_Initial_Order__c/fields/FS_ACNInitial_Order_Total_Jet_Outlet_Vol__c.field-meta.xml
<CustomField>
    <fullName>FS_ACNInitial_Order_Total_Jet_Outlet_Vol__c</fullName>
    <formula>FS_Installation__r.FS_Outlet__r.Total_VPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACN- Initial Order- Total Jet Outlet Vol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>