force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Add_new_Customer_Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Add_new_Customer_Support_Notes__c</fullName>
    <label>Add new Customer Support Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>