force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Additional_Dispenser_II__c.field-meta.xml
<CustomField>
    <fullName>FS_Additional_Dispenser_II__c</fullName>
    <label>Choose Options for Additional Dispenser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes- full order needed</fullName>
            </value>
            <value>
                <fullName>Yes- dispenser order needed</fullName>
            </value>
            <value>
                <fullName>Yes- no product needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>