force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Bypass__c.field-meta.xml
<CustomField>
    <fullName>FS_Bypass__c</fullName>
    <formula>FS_Installation__r.FS_Bypass__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>