force-app/main/default/objects/FS_Initial_Order__c/fields/FS_dispInclude__c.field-meta.xml
<CustomField>
    <fullName>FS_dispInclude__c</fullName>
    <label>Dispensers to Include in Cart. Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>