force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Dry_Install__c.field-meta.xml
<CustomField>
    <fullName>FS_Dry_Install__c</fullName>
    <formula>FS_Installation__r.FS_Dry_Install__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dry Install</label>
    <type>Checkbox</type>
</CustomField>