force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Estimated_Annual_Volume_gallons__c.field-meta.xml
<CustomField>
    <fullName>FS_Estimated_Annual_Volume_gallons__c</fullName>
    <formula>FS_Installation__r.FS_Outlet__r.FS_Estimated_Annual_Volume_gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual Volume(gallons):</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>