force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Freestyle_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_Dispensers__c</fullName>
    <formula>IF( FS_dispInclude__c &gt;0, FS_dispInclude__c, FS_Number_of_Freestyle_Dispensers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Freestyle Dispensers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>