force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Initial_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Initial_Delivery_Date__c</fullName>
    <formula>if(NOT(ISNULL(FS_Installation__r.FS_Scheduled_Install_Date__c)) , FS_Installation__r.FS_Scheduled_Install_Date__c - 3,null)</formula>
    <label>Initial Delivery Date</label>
    <type>Date</type>
</CustomField>