force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Initial Orders</relationshipLabel>
    <relationshipName>Initial_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>