force-app/main/default/objects/FS_Initial_Order__c/fields/FS_InstallNotesComments__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallNotesComments__c</fullName>
    <formula>$User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Notes/Comments</label>
    <type>Text</type>
</CustomField>