force-app/main/default/objects/FS_Initial_Order__c/fields/FS_InstallNotesComments_text__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallNotesComments_text__c</fullName>
    <label>Install Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>