force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Local_Time__c</fullName>
    <defaultValue>Text(Now())</defaultValue>
    <description>WHICH CAN BE USED IN WORKFLOW &amp;TRIGGER FROM GMT TO LOCAL TIME</description>
    <label>Local Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>