force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Mello_Yello_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Mello_Yello_Check__c</fullName>
    <formula>IF( OR( TEXT(FS_Order_Proc_Date__c)  = &#39;&#39; , AND( today() &gt;= FS_Vault_Conversion_Date__c , FS_Order_Proc_Date__c &gt;= FS_Vault_Conversion_Date__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mello Yello Check</label>
    <type>Checkbox</type>
</CustomField>