force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Number_of_Freestyle_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Freestyle_Dispensers__c</fullName>
    <label>Number of Freestyle Dispensers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>