force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Number_of_Initial_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_of_Initial_Order__c</fullName>
    <formula>IF( FS_Order_Processed__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Initial Order</label>
    <type>Text</type>
</CustomField>