force-app/main/default/objects/FS_Initial_Order__c/fields/FS_of_dispensers_to_ship_to_outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_of_dispensers_to_ship_to_outlet__c</fullName>
    <formula>FS_Number_of_Freestyle_Dispensers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Dispensers To Ship to Outlet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>