force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Order_Proc_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Proc_Date__c</fullName>
    <formula>DATEVALUE( FS_Order_Processed_DataTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Proc Date</label>
    <type>Date</type>
</CustomField>