force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Order_Processed__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Processed</label>
    <type>Checkbox</type>
</CustomField>