force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Order_Processed_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Processed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Processed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initial_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>