force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Order_Processed_By_form__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Processed_By_form__c</fullName>
    <description>who checked the order processed checkbox</description>
    <label>Order Processed/ Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>