force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Order_Processed_DataTime__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Processed_DataTime__c</fullName>
    <label>Order Processed/Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>