force-app/main/default/objects/FS_Initial_Order__c/fields/FS_OrderMethod__c.field-meta.xml
<CustomField>
    <fullName>FS_OrderMethod__c</fullName>
    <formula>FS_Installation__r.FS_Outlet__r.FS_Final_Order_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Method</label>
    <type>Text</type>
</CustomField>