force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Initial Orders</relationshipLabel>
    <relationshipName>Initial_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>