force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Outlet_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Address__c</fullName>
    <formula>IF(CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), &quot;&quot; &amp; 
FS_Installation__r.FS_New_Outlet__r.ShippingStreet &amp; BR() &amp;
FS_Installation__r.FS_New_Outlet__r.ShippingCity &amp;&quot;, &quot;&amp; FS_Installation__r.FS_New_Outlet__r.ShippingState &amp;&quot;, &quot;&amp; FS_Installation__r.FS_New_Outlet__r.ShippingPostalCode
, 

&quot;&quot; &amp; 
FS_Installation__r.FS_Outlet__r.ShippingStreet &amp; BR() &amp;
FS_Installation__r.FS_Outlet__r.ShippingCity &amp;&quot;, &quot; &amp;
FS_Installation__r.FS_Outlet__r.ShippingState &amp;&quot; &quot;&amp; FS_Installation__r.FS_Outlet__r.ShippingPostalCode

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Address</label>
    <type>Text</type>
</CustomField>