force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Outlet_Information__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Information__c</fullName>
    <formula>FS_Installation__r.FS_Outlet_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Information</label>
    <type>Text</type>
</CustomField>