force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Name__c</fullName>
    <formula>IF(CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.Name, FS_Installation__r.FS_Outlet__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>