force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Outlet_Store__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Store__c</fullName>
    <formula>IF(CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.FS_Store_Number__c, FS_Installation__r.FS_Outlet__r.FS_Store_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Store #</label>
    <type>Text</type>
</CustomField>