force-app/main/default/objects/FS_Initial_Order__c/fields/FS_OverallStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_OverallStatus__c</fullName>
    <description>Installation Overall Status</description>
    <formula>FS_Installation__r.FS_Overall_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Overall Status</label>
    <type>Text</type>
</CustomField>