force-app/main/default/objects/FS_Initial_Order__c/fields/FS_PADE_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_PADE_Check__c</fullName>
    <formula>IF( AND( TEXT(FS_Order_Proc_Date__c)  = &#39;&#39; ,  OR( today() &gt;= FS_Powerade_Conversion_Date__c , FS_Order_Proc_Date__c &gt;= FS_Powerade_Conversion_Date__c)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PADE Check</label>
    <type>Checkbox</type>
</CustomField>