force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Payment_Method__c</fullName>
    <formula>TEXT(FS_Installation__r.FS_Outlet__r.Cokesmart_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartridge Payment Method</label>
    <type>Text</type>
</CustomField>