force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Payment_Method_SetUp__c.field-meta.xml
<CustomField>
    <fullName>FS_Payment_Method_SetUp__c</fullName>
    <formula>FS_Installation__r.FS_Payment_Method_Set_Up_CPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method Set-up</label>
    <type>Checkbox</type>
</CustomField>