force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Platform_Type_s__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_Type_s__c</fullName>
    <formula>SUBSTITUTE(TRIM( 
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;6000&quot;), &quot;6000 &quot;,NULL)+
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;6050&quot;), &quot;6050 &quot;,NULL)+ 
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;7000&quot;), &quot;7000 &quot;,NULL)+
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;7100&quot;), &quot;7100 &quot;,NULL)+ 
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;8000&quot;), &quot;8000 &quot;,NULL)+ 
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;9000&quot;), &quot;9000 &quot;,NULL)+ 
IF( INCLUDES( FS_Installation__r.Type_of_Dispenser_Platform__c , &quot;9100&quot;), &quot;9100&quot;,NULL)),&quot; &quot;,&quot;;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platform Type/s</label>
    <type>Text</type>
</CustomField>