force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Powerade_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Powerade_Check__c</fullName>
    <formula>IF( AND( TEXT(FS_Order_Proc_Date__c)  = &#39;&#39; ,  OR( today() &lt; FS_Powerade_Conversion_Date__c , FS_Order_Proc_Date__c &lt; FS_Powerade_Conversion_Date__c)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Powerade Check</label>
    <type>Checkbox</type>
</CustomField>