force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Powerade_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Powerade_Conversion_Date__c</fullName>
    <formula>DATE(2011,12,02)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Powerade Conversion Date</label>
    <type>Date</type>
</CustomField>