force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Readiness_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Readiness_Notes__c</fullName>
    <label>Readiness Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>