force-app/main/default/objects/FS_Initial_Order__c/fields/FS_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>FS_ShipTo__c</fullName>
    <formula>FS_Installation__r.FS_ShipTo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>