force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Slots_Partial_Case__c.field-meta.xml
<CustomField>
    <fullName>FS_Slots_Partial_Case__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slots to be Filled in Partial Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>