force-app/main/default/objects/FS_Initial_Order__c/fields/FS_SpicyCherry__c.field-meta.xml
<CustomField>
    <fullName>FS_SpicyCherry__c</fullName>
    <formula>TEXT(  FS_Installation__r.FS_Spicy_Cherry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spicy Cherry</label>
    <type>Text</type>
</CustomField>