force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Total_Full_Cases__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Full_Cases__c</fullName>
    <formula>FS_Total_Initial_Slots__c / 16</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Full Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>