force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Total_Initial_Slots2__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Initial_Slots2__c</fullName>
    <label>Total Initial Slots</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>