force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Total_Initial_Slots__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Initial_Slots__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Initial Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>