force-app/main/default/objects/FS_Initial_Order__c/fields/FS_Vault_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Vault_Conversion_Date__c</fullName>
    <formula>DATE(2011, 10, 28)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vault Conversion Date</label>
    <type>Date</type>
</CustomField>