force-app/main/default/objects/FS_Initial_Order__c/fields/FS_VMSCustomer__c.field-meta.xml
<CustomField>
    <fullName>FS_VMSCustomer__c</fullName>
    <formula>TEXT(FS_Installation__r.FS_Outlet__r.FS_VMS_Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VMS Customer?</label>
    <type>Text</type>
</CustomField>