force-app/main/default/objects/FS_Initial_Order__c/fields/FS_VPO_Override__c.field-meta.xml
<CustomField>
    <fullName>FS_VPO_Override__c</fullName>
    <inlineHelpText>Please go to Outlet page &gt; Volume Section to override VPO</inlineHelpText>
    <label>VPO Override</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>