force-app/main/default/objects/FS_Initial_Order__c/fields/FS_VPO_Override_New__c.field-meta.xml
<CustomField>
    <fullName>FS_VPO_Override_New__c</fullName>
    <formula>IF( CONTAINS(RecordType.DeveloperName, &#39;Relocation&#39;), FS_Installation__r.FS_New_Outlet__r.FS_VPO_Override__c, 
FS_Installation__r.FS_Outlet__r.FS_VPO_Override__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VPO Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>